--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/light.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/light.css
@@ -25,7 +25,7 @@ body[kui-theme="Light"] {
     --color-light-yellow: #efc100;
 
     --color-hover-primary-text: #294c86;
-    --color-content-divider: #4173AF;
+    --color-content-divider: #0062ff;
     --color-tag-beta-fill: #dfe3e6;
     --color-tag-beta-text: #394b54;
     --color-tag-ibm-fill: #c0e6ff;
