--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -486,6 +486,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    height: 2.5em;
 }
 
 /* row selection */
@@ -718,7 +719,14 @@ sidecar.visible {
     flex: 6;
     z-index: 1; /* float above the repl */
     transition-duration: 600ms; /* a bit slower coming out */
-    border-left: 1px solid var(--color-ui-04);
+    border-left: 1px solid var(--color-ui-03);
+    border-top: 1px solid var(--color-ui-03);
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    border-top-right-radius: 6px;
+    height: calc(100% - 1ex);
+    margin-top: 1ex;
+    box-shadow: 0px 0px 1px var(--color-ui-04);
 }
 body:not(.subwindow) .sidecar-full-screen sidecar.visible:not(.minimized) {
     border-left-color: var(--color-ui-04);
@@ -742,6 +750,9 @@ body[kui-theme-style="dark"] sidecar:not(.minimized) .sidecar-bottom-stripe {
     z-index: 5;
     background-color: var(--color-stripe-02);
 }
+/* sidecar .sidecar-bottom-stripe {
+    order: -1;
+} */
 sidecar .sidecar-bottom-stripe > div {
     font-size: 0.875em;
 }
@@ -851,8 +862,8 @@ sidecar .custom-content {
 sidecar .sidecar-header {
     display: flex;
     background-color: var(--color-ui-01);
-    flex-basis: 8rem;
-    min-height:  8rem; /* see shell issue #712 */
+    flex-basis: 9rem;
+    min-height:  9rem; /* see shell issue #712 */
     transition: background-color 300ms ease-in-out, border-color 300ms ease-in-out;
 }
 sidecar .sidecar-header .header-main-content {
@@ -933,7 +944,7 @@ sidecar .sidecar-header-name {
 
     /* the bit of padding allows for space to initiate a drag-select of
    the header name text */
-    padding-right: 1em;
+    padding-right: 1rem;
     -webkit-app-region: no-drag !important;
 }
 sidecar .sidecar-header .entity-name-line {
@@ -1005,7 +1016,7 @@ sidecar.entity-is-activations .sidecar-header-name  .sidecar-header-name-content
     white-space: nowrap;
 }
 sidecar .sidecar-header-secondary-content {
-    font-size: 0.875rem;
+    font-size: 0.875em;
     display: flex;
     align-items: center;
     opacity: 0.875;
@@ -1605,6 +1616,7 @@ body[kui-theme-style="dark"] .log-lines, body[kui-theme-style="dark"] .list-pagi
 .log-lines .log-line .log-field {
     /* every field in the log table */
     display: table-cell;
+    vertical-align: middle;
     padding: 0.375rem;
     overflow: hidden;
     white-space: nowrap;
@@ -2062,7 +2074,7 @@ body.subwindow .sidecar-full-screen sidecar:not(.minimized) .sidecar-bottom-stri
 }
 .graphical-icon {
     /* font awesome icons in the bottom stripe */
-    font-size: 1.25rem;
+    font-size: 1.25em;
     min-width: 1em;
     display: flex;
     justify-content: flex-start;
@@ -2512,9 +2524,10 @@ sidecar .usage-error-wrapper .hideable {
 .page-content p {
     font-weight: 400;
     line-height: 1.5em;
+    margin: 0 1em;
 }
 .page-content p:not(:last-child) {
-    padding: 0 0 0.5em;
+    padding-bottom: 0.5em;
 }
 .page-content h1 {
     font-size: 3.375em;
@@ -2528,27 +2541,26 @@ sidecar .usage-error-wrapper .hideable {
 .page-content h2, .page-h2 {
     font-size: 1.75em;
     font-weight: 300;
-    margin-top: 3em;
-    padding: 1em 0 0;
+    margin: 1em 1rem 0.5em;
     position: relative;
     line-height: 1.25;
 }
 .page-content h2::before, .page-h2::before {
-    background-color: var(--color-carbon-components-h3);
+    background-color: var(--color-content-divider);
     content: "";
     display: block;
-    height: .3em;
+    height: 1px;
     left: 0;
     position: absolute;
-    top: -.5em;
-    width: 5em;
+    bottom: -5px;
+    width: 100%;
 }
 .page-content > h3:first-child, .page-content > h2:first-child, .page-content hr + h3 {
     margin-top: 0;
     padding-top: 0;
 }
 .page-content h3, .page-h3 {
-    color: var(--color-carbon-components-h3);
+    color: var(--color-content-divider);
     font-size: 1.125em;
     font-weight: 600;
     letter-spacing: 0;
@@ -2723,7 +2735,7 @@ body[kui-theme-style="dark"] .sidecar-bottom-stripe {
     display: flex;
 }
 .sidecar-bottom-stripe .sidecar-bottom-stripe-button {
-    padding: 0 0.4375em;
+    padding: 0 0.375em;
 }
 .sidecar-bottom-stripe .sidecar-bottom-stripe-button.sidecar-bottom-stripe-button-active {
     border-bottom-color: var(--color-brand-02);
@@ -2902,7 +2914,6 @@ body {
     --font-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     --font-monospace: -apple-system,SFMono-Regular,"SF Mono",Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 
-    --color-carbon-components-h3: var(--color-cyan);
     --color-hover-primary-text: var(--color-cyan);
     --color-content-divider: var(--color-cyan);
 
