feat(packages/app): prompt styling
Fixes #1872

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -6,7 +6,7 @@
 
     <link href="${fonts}" rel="stylesheet" type="text/css">
 
-    <link href="https://unpkg.com/carbon-components/css/carbon-components.min.css" rel="stylesheet" type="text/css">
+    <link href="${cssHome}carbon-components.min.css" rel="stylesheet" type="text/css">
     <link href="${cssHome}carbon-overrides.css" rel="stylesheet" type="text/css" >
 
     <link href="${cssHome}not-electron.css" rel="stylesheet" type="text/css" >
