--- a/packages/app/web/css/top-tab-stripe.css
+++ b/packages/app/web/css/top-tab-stripe.css
@@ -178,6 +178,9 @@ sidecar .sidecar-header-name-content {
     padding: 0 0 0 0.375rem;
     transition: padding 150ms ease-in-out;
 }
+.repl-output {
+    padding-top: 0.375rem;
+}
 .repl-result > div, .repl:not(.sidecar-visible) .repl-result .result-table-outer {
     padding-right: 0.375rem;
 }
